Fix photos sizes on IOS

--- a/src/components/pages/GallerySimple.css
+++ b/src/components/pages/GallerySimple.css
@@ -5,19 +5,22 @@
     padding: 10px;
     max-height: 80vh;
     overflow-y: auto;
+    width: 100%;
 }
 
 .gallery-item {
+    position: relative;
+    padding-bottom: 100%;
     width: 100%;
-    aspect-ratio: 1/1;
-    overflow: hidden;
+    height: 0;
     border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
 }
 
 .gallery-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -27,7 +30,6 @@
 .gallery-image:hover {
     transform: scale(1.05);
 }
-
 
 .gallery-container::-webkit-scrollbar {
     width: 8px;
@@ -62,7 +64,7 @@
 
 .modal-image {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 90vh;
     border-radius: 10px;
 }
 
